add some teammate Ali rizvi folder and Malik umer folder

--- a/food-menu.html
+++ b/food-menu.html
@@ -13,22 +13,25 @@
     <!-- Header -->
     <header>
         <div class="container-i header-container-i">
-            <a href="#" class="logo">Grill<span>Chemmy</span></a>
+            <a href="#" class="logo-i">Grill<span>Chemmy</span></a>
             <nav>
                 <ul>
-                    <li >
-                        <a href="index.html" >Home</a>
+                    <li>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="ali-rizvi/about.html">About</a>
                     </li>
                     <li class="active-tab">
                         <a href="food-menu.html">Food Menu</a>
                     </li>
-                   
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="ali-rizvi/book.html">Book Table</a>
                     </li>
+                    <li>
+                        <a href="./Umer/contact.html">Contact</a>
+                    </li>
+
                 </ul>
             </nav>
             <div class="login-btn-container-i">
@@ -39,7 +42,6 @@
             </div>
         </div>
     </header>
-
     <!-- Menu Content -->
     <div class="menu-container-i">
         <div class="menu-header">
