--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="ali-rizvi/about.html">About</a>
                     </li>
                     <li>
                         <a href="food-menu.html">Food Menu</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="ali-rizvi/book.html">Book Table</a>
                     </li>
+                    <li>
+                        <a href="./Umer/contact.html">Contact</a>
+                    </li>
+
                 </ul>
             </nav>
             <div class="login-btn-container-i">
