--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 GrillChemmy. All rights reserved. Developer Shayan Sheikh</p>
+          <p>&copy; 2025 GrillChemmy. All rights reserved. Developer Shayan Sheikh Team</p>
         </div>
       </footer>
 </body>
