Shayan Sheikh id=294687

--- a/ali-rizvi/book.html
+++ b/ali-rizvi/book.html
@@ -66,7 +66,7 @@
                   </li> </ul>
                 </nav>
                 <div class="login-btn-container-i">
-                    <a href="login.html" class="btn login-btn">Login</a>
+                    <a href="../login.html" class="btn login-btn">Login</a>
                 </div>
                 <div class="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
