--- a/login.html
+++ b/login.html
@@ -38,6 +38,6 @@
         </div>
     </div>
 
-    <script type="module" src="script.js" defer></script>
+    <script type="module" src="firebase-auth.js" defer></script>
 </body>
 </html> 
