Shayan Sheikh id=294687

--- a/login.html
+++ b/login.html
@@ -19,11 +19,11 @@
             <form>
                 <div class="input-group">
                     <label for="username">Username / Email address <span>*</span> </label>
-                    <input type="text" id="username" name="username" placeholder="Example: sheikhshayan082@gmail.com" required>
+                    <input type="text" id="username" name="username" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Password <span>*</span></label>
-                    <input type="password" id="password" name="password" placeholder="Example: 12345678" required>
+                    <input type="password" id="password" name="password" required>
                 </div>
                 <div class="remember-me">
                     <input type="checkbox" id="remember" name="remember">
@@ -38,6 +38,6 @@
         </div>
     </div>
 
-    <script type="module" src="firebase-auth.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </body>
 </html> 
