--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <form>
                 <div class="input-group">
                     <label for="username">Username / Email address <span>*</span> </label>
-                    <input type="email" id="username" name="username" required>
+                    <input type="username" id="username" name="username" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Password <span>*</span></label>
