--- a/login.html
+++ b/login.html
@@ -19,11 +19,11 @@
             <form>
                 <div class="input-group">
                     <label for="username">Username / Email address <span>*</span> </label>
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="username" name="username" value="shayansheikh@gmail.com" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Password <span>*</span></label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" value="12345678" required>
                 </div>
                 <div class="remember-me">
                     <input type="checkbox" id="remember" name="remember">
