Shayan Sheikh id=294687

--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
                     </div>
 
                     <div class="animate delay-4 coming-soon-btn">
-                        <a href="#" class="btn">Order Now (Coming Soon)</a>
-                        <p class="coming-soon-note">Currently available for pickup only</p>
+                        <a href="#" class="btn">Order Now</a>
+                    
                     </div>
                 </div>
 
