--- a/ali-rizvi/book.html
+++ b/ali-rizvi/book.html
@@ -16,7 +16,7 @@
   integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Gourmet Haven - Premium Restaurant</title>
+  <title><title>GrillChemmy - book order</title> - Premium Restaurant</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
